# water-quality

./: .dockerignore  .gitignore  Makefile  README.md  WaterQualityDatasets.md  WaterbodiesAttributes.md  compose.yaml  install_vscode_extensions.sh  pyproject.toml  ruff.toml
.github/workflows/: build-test-docker.yml
data/cgls_lwq300_2002_2012/2002/05/: c_gls_LWQ300_200205110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200205110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200205210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200205210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/06/: c_gls_LWQ300_200206110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200206110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200206210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200206210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/07/: c_gls_LWQ300_200207010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200207010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200207110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200207110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200207210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200207210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/08/: c_gls_LWQ300_200208010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200208010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200208110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200208110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200208210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200208210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/09/: c_gls_LWQ300_200209010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200209010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200209110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200209110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200209210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200209210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/10/: c_gls_LWQ300_200210010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200210010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200210110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200210110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200210210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200210210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/11/: c_gls_LWQ300_200211010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200211010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200211110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200211110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200211210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200211210000_GLOBE_MERIS_V1.3.0.stac-item.json
data/cgls_lwq300_2002_2012/2002/12/: c_gls_LWQ300_200212010000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200212010000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200212110000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200212110000_GLOBE_MERIS_V1.3.0.stac-item.json  c_gls_LWQ300_200212210000_GLOBE_MERIS_V1.3.0.odc-metadata.yaml  c_gls_LWQ300_200212210000_GLOBE_MERIS_V1.3.0.stac-item.json
docker/: Dockerfile  environment.yaml  requirements.txt
docker/assets/: jupyter_lab_config.py
products/: cgls_LWQ300_2002_2012.odc-product.yaml  cgls_LWQ300_v1_300-odc-product.yaml  cgls_lwq100_2019_2024.odc-product.yaml  cgls_lwq100_2024_nrt.odc-product.yaml  cgls_lwq300_2002_2012.odc-product.yaml  cgls_lwq300_2016_2024.odc-product.yaml  cgls_lwq300_2024_nrt.odc-product.yaml  products.csv
scripts/: delete_cogs.py
src/water_quality/: common.py  download_gsw_cogs.py  easi_assemble.py  io.py  logs.py  utils.py
src/water_quality/cgls_lwq/: common_raster_attrs.py  constants.py  create_stac.py  download_cogs.py  geotiff.py  get_storage_attributes.py  main.py  metadata_generator.py  netcdf.py  prepare_metadata.py  tiles.py
src/water_quality/clms_lwq/: common.py  create_stac.py  get_storage_attributes.py  main.py  prepare_metadata.py  utils.py
src/water_quality/indexing_tools/: fs_to_dc_v2.py  s3_to_dc_v2.py  stac_to_eo3.py
(+44 files in other folders)
