[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "water-quality"
version = "0.0.1"
authors = [
  { name="Victoria Neema", email="vikinyaga@gmail.com" },
]
maintainers = [
  { name="Victoria Neema", email="vikinyaga@gmail.com" },
]
description = "Helpful scripts to make water extent and water quality data available in a ODC deploymnent"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS',
    'License :: OSI Approved :: Apache Software License',
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
  "aiobotocore[awscli,boto3]",
  "click",
  "datacube[performance,distributed,s3,netcdf]",
  "eodatasets3",
  "fsspec",
  "geopandas",
  "gcsfs",
  "numpy",
  "odc-apps-dc-tools",
  "odc-geo",
  "PyYAML",
  "requests",
  "rioxarray",
  "s3fs",
  "tqdm", 
  "h5netcdf" # For sandbox to work with netcdf files
  ]
[project.optional-dependencies]
dev = [
 "ruff",
 "yamlint", 
 ]
test = [
    "pytest",
    "coverage"
]

[project.urls]
"Homepage" = "https://github.com/vikineema/water-quality"
"Bug Reports" = "https://github.com/vikineema/waterquality/issues"
"Source" = "https://github.com/vikineema/waterquality/"

[project.scripts]
# Indexing tools
s3-to-dc-v2 = "water_quality.indexing_tools.s3_to_dc_v2:cli"
fs-to-dc-v2 = "water_quality.indexing_tools.fs_to_dc_v2:cli"
# cgls-lwq products 
download-cgls-lwq-cogs = "water_quality.cgls_lwq.download_cogs:download_cogs"
create-cgls-lwq-stac = "water_quality.cgls_lwq.metadata_generator:create_stac_files"